--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@testing-library/user-event": "^13.5.0",
     "google-maps-react": "^2.0.2",
     "html-react-parser": "^0.10.1",
-    "owl.carousel": "^2.3.4",
-    "react-router-dom": "^5.1.2",
-    "wowjs": "^1.1.3",
+    "jquery": "^3.6.0",
     "node-sass": "^7.0.1",
+    "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
     "sass-loader": "^13.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
