--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
 	"name": "my-portfolio",
 	"version": "0.1.0",
 	"private": true,
+	"keywords": [
+		"example",
+		"heroku"
+	],
+	"engines": {
+		"node": "16.15.1"
+	},
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
