--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"heroku"
 	],
 	"engines": {
-		"node": "16.15.1"
+		"node": "16.15.1",
+		"npm": "8.13.2"
 	},
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
