--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
 		"jquery": "^3.6.0",
 		"node-sass": "^7.0.1",
 		"react": "^18.2.0",
+		"react-animated-number": "^0.4.4",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
-		"react-router-dom": "^5.1.2",
+		"react-router": "^6.3.0",
+		"react-router-dom": "^5.3.3",
 		"react-scripts": "5.0.1",
+		"react-scroll": "^1.8.7",
 		"sass-loader": "^13.0.2",
 		"web-vitals": "^2.1.4"
 	},
